--- a/style.css
+++ b/style.css
@@ -84,12 +84,11 @@
 
 .section__chef{
   width: 100%;
-  height: 100vh;
+  height: 115vh;
   background-image: url(Sin-título-3.png);
   background-size: cover;
   background-position: center;
   display: flex;
-  /* justify-content: center; */
   flex-direction: column;
 }
 
@@ -129,6 +128,99 @@
     color: var(--color__chef);
     font-size: 25px;
     margin-top: 10px;
+}
+
+/* comienzo de la primera hamburgesa */
+
+.section__burger{
+    background-color: var(--color__chef);
+    width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
+}
+
+.section__burger--relleno{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 100px;
+}
+
+
+.section__burger--title{
+    font-size: 80px;
+    color: var(--color__header);
+}
+
+.section__burger--p{
+    font-size: 30px;
+    margin-top: 20px;
+    width: 800px;
+    color: var(--color__header);
+}
+
+.burger__buton{
+    border-radius: 90px;
+    font-size: 30px;
+    padding: 10px 90px;
+    color: var(--color_boton);
+    background-color: var(--color__header);
+    border: none;
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+/* comienzo de la segunda hamburgesa */
+
+.section__hambur{
+    background-image: url(Sin-título-5.png);
+    width: 100%;
+    height: 115vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+}
+
+.section__hambur--relleno{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 100px;
+}
+.section__hambur--title{
+    font-size: 80px;
+    color: var(--color__chef);
+}
+.section__hambur--p{
+    font-size: 30px;
+    margin-top: 20px;
+    width: 800px;
+    color: var(--color__chef);
+}
+
+/* comienzo de las estadisticas */
+
+.section__estadisticas{
+    background-color: var(--color__chef);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.section__estadisticas--tilte{
+    font-size: 80px;
+    margin-top: 50px;
+    color: var(--color__header);
+}
+
+.section__estadisticas--p{
+    font-size: 30px;
+    margin-top: 20px;
+    width: 800px;
+    color: var(--color__header);
 }
