--- a/style.css
+++ b/style.css
@@ -97,20 +97,21 @@
     justify-content: center;
     color: var(--color__chef);
     font-size: 100px;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 .section__chef--p{
     color: var(--color__chef);
     font-size: 30px;
-    margin-top: 20px;
+    margin-top: 100px;
+    text-align: center;
     width: 800px;
-    margin-left: 400px;
+    margin-left: 550px;
 }
 
 
 .section__chef--cards{
-    margin-top: 50px;
+    margin-top: 100px;
     display: flex;
     justify-content: space-evenly;
 }
