--- a/estilos/style.css
+++ b/estilos/style.css
@@ -21,7 +21,7 @@
 /* comienzo header  */
 
 .header{
-    background-image: url(../img/Sin-título-2.png);
+    background-image: url(../img/Sin-título-2.png); 
     width: 100%;
     height: 100vh;
     background-size: cover;
@@ -75,54 +75,6 @@
     display: flex;
     justify-content: center;
 } 
-
-/* .header__fondo{
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-}
-
-
-.header__navegacion {
-    position: absolute;
-    top: -30px;
-    color: var(--color__header);
-    display: flex;
-    justify-content: space-evenly;
-    align-items: end;
-    width: 100%; 
-    height: 100px;
-    margin-top: 20px;
-    font-size: 30px;
-    box-sizing: border-box;
-    background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-}
-
-.header__navegacion ul {
-    list-style: none;
-    display: flex;
-    gap: 2rem;
-}
-
-.header__txt{
-    position: absolute;  
-    left: 50px;
-    top: 23%;
-    width: 100%;
-    max-width: 800px; 
-    padding: 30px; 
-    font-size: 30px;
-    color: var(--color__header);
-}
-
-.header__title{
-    font-size: 100px;
-}
-
-.header__txt p {
-    margin-top: 50px;
-}*/
-
 
 /* comienzo la parte del personal */
 
@@ -297,7 +249,7 @@
     display: flex;
     text-align: center;
     flex-direction: column;
-    gap: 18%;
+    gap: 10%;
 }
 .section__populares--txt{
     margin-top: 4%;
@@ -370,6 +322,7 @@
     flex-direction: column;
     text-align: center;
     gap: 150px;
+    /* gap: 15%; */
 }
 
 .section__fondo--p{
@@ -416,7 +369,7 @@
     background-color: var(--color__foter);
     height: 100vh;
     color: var(--color__header);
-    /* display: flex; */
+    display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
@@ -624,6 +577,7 @@
     .section__populares{
         width: 100%;
         height: 100vh;
+        display: flex;
         background-size: cover;
         background-position: center; 
     }
@@ -652,6 +606,15 @@
     .populares__cards--boton{
         font-size: 20px;
         padding: 3px 60px;
+    }
+
+    /* comienzo fondo  */
+
+    .section__fondo{
+        width: 100%;
+        height: 100vh;
+        background-size: cover;
+        background-position: center; 
     }
 
 }
