--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1009,7 +1009,7 @@
     .section__populares{
         width: auto;
         background-size: 425px ;
-        height: 150vh;
+        height: 130vh;
         gap: 5%;
     }
 
@@ -1093,5 +1093,13 @@
     .footer__list--1{
         display: none;
     } 
+
+}
+
+@media screen and (max-width:375px){
+
+    .section__populares{
+        height: 160vh;
+    }
 
 }
